--- a/.babelrc
+++ b/.babelrc
@@ -9,5 +9,5 @@
       }
     ]
   ],
-  "plugins": ["@babel/plugin-proposal-optional-chaining"]
+  "plugins": ["@babel/plugin-proposal-optional-chaining", "@babel/plugin-proposal-class-properties"]
 }
